# sandbox

./: .clang-format  CMakeLists.txt  README.md
include/: palindrome.h
include/sieve/: sieve.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
